# QtChat

./: .gitignore  readme.md
client/: CMakeLists.txt
client/Source/: main.cpp
client/Source/Cpp/: clickedlabel.cpp  global.cpp  httpmanager.cpp  logindialog.cpp  mainwindow.cpp  registerdialog.cpp  resetdialog.cpp  timerbtn.cpp
client/Source/Forms/: logindialog.ui  mainwindow.ui  registerdialog.ui  resetdialog.ui
client/Source/Headers/: clickedlabel.h  global.h  httpmanager.h  logindialog.h  mainwindow.h  registerdialog.h  resetdialog.h  singleton.h  tcpmanager.cpp  tcpmanager.h  timerbtn.h
client/res/qrc/: QtChat.rc  rc.qrc
client/res/style/: stylesheet.qss
server/: CMakeLists.txt
server/GateServer/: CMakeLists.txt  GateServer.cpp  config.ini
server/GateServer/Cpp/: AsioIOServicePool.cpp  CServer.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlDao.cpp  MysqlManager.cpp  RedisConnectionPool.cpp  RedisManager.cpp  VerifyGrpcClient.cpp
server/GateServer/Headers/: AsioIOServicePool.h  CServer.h  ConfigManager.h  HttpConnection.h  LogicSystem.h  MysqlDao.h  MysqlManager.h  RedisConnectionPool.h  RedisManager.h  Singleton.h  VerifyGrpcClient.h  const.h
server/StatusServer/: CMakeLists.txt  StatusServer.cpp
server/StatusServer/Cpp/: CServer.cpp  ConfigManager.cpp  HttpConnection.cpp  MysqlDao.cpp  MysqlManager.cpp  StatusGrpcClient.cpp  StatusServiceImpl.cpp
server/StatusServer/Headers/: HttpConnection.h  MysqlDao.h  RedisManager.h  Singleton.h  StatusGrpcClient.h  StatusServiceImpl.h  const.h
server/StatusServer/grpc/: message.proto
server/VarifyServer/: config.js  config.json  email.js  package-lock.json  package.json  redis.js  server.js
